--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,36 @@
 body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(7, 2, 2);
   }
-
-  h1{
+  
+  h1, h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  color:  rgb(211, 214, 6);
   }
+  
+  h2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color:  rgb(2, 2, 1);
+    }
 
+   #item-title {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      color:  rgb(248, 7, 7);
+      }
+      
   #wish-list-container {
     width:1279px;
     margin:auto;
@@ -20,7 +41,9 @@ body {
     width:1279px;
     margin:auto;
     margin-top:50px;
+    
   }
+  
   #person-container {
     width:250px;
     margin:auto;
@@ -33,13 +56,26 @@ body {
   justify-content: center;
   text-align: center;
   }
-  
-  .wish-card{
+
+  .list-card{
+    float:left;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    width:250px;
+    height: 250px;
+    background-color: rgb(164, 167, 29);
+    color: #000000;
+    margin:15px;
+    text-align: center;
+  }
+
+  .item-card{
     float:left;
     width:393px;
     height: 555px;
-    background-color: rgb(9, 104, 56);
-    color: #000080;
+    background-color: rgb(211, 214, 6);
+    color: #000000;
     margin:15px;
     text-align: center;
   }
