adjusted css for easier viewing of html elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgb(7, 2, 2);
+  background-color: rgb(124, 124, 124);
   }
   
   h1, h3 {
@@ -23,13 +23,13 @@ body {
     color:  rgb(2, 2, 1);
     }
 
-   #item-title {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-      color:  rgb(248, 7, 7);
-      }
+  #item-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    color:  rgb(0, 0, 0);
+  }
       
   #wish-list-container {
     width:1279px;
@@ -50,7 +50,7 @@ body {
     margin-top:50px;
   }
 
-  #new-form{
+  #new-list-form{
   display: flex;
   flex-direction: column;
   justify-content: center;
