--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   background-color: rgb(124, 124, 124);
   }
   
-  h1, h3 {
+  /* h1, h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -81,4 +81,4 @@ body {
   }
   .center-text {
     text-align: center;
-  }
+  } */
