--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,19 @@
 body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  /* font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; */
+  font-family: 'Satisfy', cursive;
   font-weight: 300;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgb(124, 124, 124);
+  background-image: url("https://i.pinimg.com/originals/91/5a/14/915a14fdbc67cf4b160a3932c19f1b4e.jpg");
+  background-repeat: repeat;
+  background-color: rgb(255, 255, 255);
+  background-size: cover;
+  background-position: center;
   }
   
-  /* h1, h3 {
+  h1, h3 {
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,6 +22,7 @@ body {
   }
   
   h2 {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -32,22 +39,31 @@ body {
   }
       
   #wish-list-container {
-    width:1279px;
-    margin:auto;
-    margin-top:50px;
+    width: 1279px;
+    margin: auto;
+    margin-top: 50px;
   }
 
-  #wish-items-container {
+  /* #wish-items-container {
     width:1279px;
     margin:auto;
     margin-top:50px;
     
+  } */
+  #santas-image {
+    width: 100%;
+    height: 150px;
+    /* display: block; */
+    margin: auto;
+    justify-content: center;
+    border-radius: 15px;
+    border: 20px solid rgb(196, 11, 11);
   }
-  
-  #person-container {
-    width:250px;
-    margin:auto;
-    margin-top:50px;
+
+  #new-list-container {
+    width: 250px;
+    margin: auto;
+    margin-top: 50px;
   }
 
   #new-list-form{
@@ -58,27 +74,27 @@ body {
   }
 
   .list-card{
-    float:left;
-    display: flex;
+    float: right;
+    /* display: flex; */
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center; 
     width:250px;
     height: 250px;
-    background-color: rgb(164, 167, 29);
+    background-color: rgb(136, 1, 1);
     color: #000000;
-    margin:15px;
+    margin: 15px;
     text-align: center;
   }
 
   .item-card{
-    float:left;
-    width:393px;
-    height: 555px;
-    background-color: rgb(211, 214, 6);
+    float: left;
+    width: 250px;
+    height: 450px;
+    background-color:  rgb(136, 1, 1);
     color: #000000;
-    margin:15px;
+    margin: 15px;
     text-align: center;
   }
   .center-text {
     text-align: center;
-  } */
+  } 
