--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url('https://static.nashvillewraps.com/images/sku/1278285-XLARGE.jpg');
+  /* background-image: url('https://static.nashvillewraps.com/images/sku/1278285-XLARGE.jpg');
   background-repeat: repeat;
   background-color: rgb(255, 255, 255);
   background-size: cover;
-  background-position: center;
+  background-position: center; */
   }
 
-  #topDiv {
+  /* #topDiv {
   background-image: url("https://i.pinimg.com/originals/91/5a/14/915a14fdbc67cf4b160a3932c19f1b4e.jpg");
   background-repeat: no-repeat;
   background-color: rgb(255, 255, 255, 0.75);
@@ -41,23 +41,15 @@ body {
     font-size: 45px;
   }
 
-  /* h2 {
+  #wish-title {
     display: flex;
+    font-size: 20;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    color:  rgb(255, 0, 0);
-    font-size: 45px;
-    } */
+    color:  rgb(221, 8, 8);
+  }
 
-    #wish-title {
-      display: flex;
-      font-size: 20;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-      color:  rgb(221, 8, 8);
-    }
   #new-list-form{
   display: flex;
   flex-direction: column;
@@ -68,7 +60,6 @@ body {
   #wish_list_container {
     width: 1279px;
     margin: auto;
-    /* margin-top: 50px; */
     background-image: url('https://www.morethanshipping.com/wp-content/uploads/2018/12/santa-north-pole-2019.jpg');
     background-repeat: repeat;
     background-color: rgb(255, 255, 255);
@@ -104,7 +95,7 @@ body {
 
   .item_card{
     float: left;
-    /* display: flex;  */
+   
     flex-direction: column;
     justify-content: center; 
     width: 250px;
@@ -114,4 +105,4 @@ body {
     margin: 15px;
     text-align: center;
   }
-  
+   */
